--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
 <!-- your HTML goes here -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Page Title</title>
+  </head>
+  <body>
+    <h1>Ashraful Hassan</h1>
+
+    <h2>Junior Web developer</h2>
+
+    <img src="img/53347628_2294174443966616_709435679976718336_n.jpg" />
+
+    <div id="main" class="container">
+      <p>Currently a 3rd year Student at a well known bangladesh University</p>
+
+      <br />
+      <h3>Here are the things that I offer</h3>
+      <ul>
+        <li>Web design</li>
+        <li>Full Stack Web development</li>
+        <li>Documentation and Report writing</li>
+        <li>Graphics design</li>
+        <li>Software Testing</li>
+      </ul>
+
+      <h3>Personal Information</h3>
+      <h4>Education</h4>
+
+      <table>
+        <tr>
+          <th>
+            Qualification
+          </th>
+          <th>
+            Year
+          </th>
+          <th>
+            School
+          </th>
+        </tr>
+        <tr>
+          <td>O level</td>
+          <td>2014</td>
+          <td>Mastermind</td>
+        </tr>
+
+        <tr>
+          <td>A level</td>
+          <td>2016</td>
+          <td>Mastermind</td>
+        </tr>
+        <tr>
+          <td>Bachelors</td>
+          <td>2016-</td>
+          <td>Independent University, bangladesh</td>
+        </tr>
+      </table>
+
+      <h2>Contact Form</h2>
+
+      <form>
+        <label>Name</label>
+        <input type="text" />
+        <br />
+        <label>Purpose</label>
+        <input type="text" />
+        <br />
+        <label>Message/request</label>
+        <input type="text" />
+        <button>Submit</button>
+      </form>
+    </div>
+  </body>
+</html>
