--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <input type="text" />
         <br />
         <label>Message/request</label>
-        <input type="text" />
+        <textarea>
         <button>Submit</button>
       </form>
     </div>
