--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>Page Title</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Ashraful Hassan</h1>
@@ -15,17 +16,20 @@
       <p>Currently a 3rd year Student at a well known bangladesh University</p>
 
       <br />
-      <h3>Here are the things that I offer</h3>
+      <h3>Here are the things that I have experiance with</h3>
       <ul>
-        <li>Web design</li>
-        <li>Full Stack Web development</li>
-        <li>Documentation and Report writing</li>
-        <li>Graphics design</li>
-        <li>Software Testing</li>
+        <li>C#</li>
+        <li>C++</li>
+        <li>Java</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+        <li>React.js</li>
+        <li>Bootstrap</li>
       </ul>
 
-      <h3>Personal Information</h3>
-      <h4>Education</h4>
+      <h2>Personal Information</h3>
+      <h3>Education</h4>
 
       <table>
         <tr>
@@ -52,8 +56,8 @@
         </tr>
         <tr>
           <td>Bachelors</td>
-          <td>2016-</td>
-          <td>Independent University, bangladesh</td>
+          <td>2016</td>
+          <td>Independent University,Bangladesh</td>
         </tr>
       </table>
 
@@ -68,6 +72,7 @@
         <br />
         <label>Message/request</label>
         <input type="text" />
+        <br>
         <button>Submit</button>
       </form>
     </div>
