--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <br>
         <button>Submit</button>
       </form>
+      <footer>
+        <p>Click <a href="https://github.com/Ashraf-Raneem">here</a> to know me further </p>
+      </footer>
     </div>
   </body>
 </html>
