--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           
         <div class="row">
           <div class="col-md-7">
-          <h2>Experianced On</h2> 
+          <h2>Experienced On</h2> 
           <ol>
             <li>C#</li>
             <li>C++</li>
